tests/compile_fail/weight_attr_more_arg.stderr
error: unexpected token
 --> $DIR/weight_attr_more_arg.rs:4:15
  |
4 |     #[weight(1, 2)]
  |               ^
